--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@ layout: archive
 author_profile: true
 ---
 
+{% assign projects = site.projects | sort: "date" | reverse %}
+
 <div class="featured-projects">
-	{% for project in site.projects %}
+	{% for project in projects %}
 	{% if project.isfeatured %}
 
 	<a class="project-link" href="{{ project.url }}">
@@ -26,7 +28,7 @@ author_profile: true
 </div>
 
 <div class="normal-projects">
-	{% for project in site.projects %}
+	{% for project in projects %}
 	{% unless project.isfeatured %}
 
 	<a class="project-link" href="{{ project.url }}">
